--- a/application.yaml
+++ b/application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://gitlab.com/nanuchi/argocd-app-config.git
+    repoURL: https://github.com/CloudSihmar/argocd-example.git
     targetRevision: HEAD
   destination: 
     server: https://kubernetes.default.svc
