--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application
+  name: pet-application
   namespace: argocd
 spec:
   project: default
