--- a/application.yaml
+++ b/application.yaml
@@ -9,6 +9,7 @@ spec:
   source:
     repoURL: https://github.com/CloudSihmar/pet-argocd-k8s.git
     targetRevision: HEAD
+    path: .
   destination: 
     server: https://kubernetes.default.svc
     namespace: pet
